--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,48 +12,108 @@
     padding: 0;
     box-sizing: border-box;
 }
+h1{
+    font-family: 'Red Hat Display', sans-serif;
+    font-weight: bolder;
+    font-size: 30px;
+}
+p{
+    font-family: 'Red Hat Display', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+}
 body{
     width: 100vw;
     min-height: 100vh;
     display: flex;
-
+    background-image: url("images/pattern-background-desktop.svg");
+    background-color: hsl(225, 100%, 94%);
+    background-repeat: no-repeat;
+    background-size:contain;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     font-size: 16px;
+    
 }
 #container{
-    width: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 350px;
     height: auto;
     border-radius: 10px;
     overflow: hidden;
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
-    background-color: red;
-    padding: 10px;
+    background-color: #fff;
+    margin: 10px;
     text-align: center;
 }
 img{
-    object-fit: cover;
+    width: 100%;
+    margin-bottom: 20px;
+    
 }
+#main{
+    padding: 10px;
+}
+#main p{
+    color:hsl(224, 23%, 55%);
+    margin-top: 10px;
+}
+
 #price{
     display: flex;
-    justify-content: space-between;
-    margin: 10px;
-    width: 250px;
-    background-color: var(--Pale-blue);
+    align-items: center;
+    width: 280px;
+    height: 60px;
+    background-color: hsl(225, 100%, 98%);
     border-radius: 10px;
+    padding-right: 30px;
+    margin-top: 15px;
+    font-family: 'Red Hat display',sans-serif;
+}
+#first{
+    font-weight: 700;
+}
+#second{
+    color:hsl(224, 23%, 55%);
+}
+#price img{
+    width: 40px;
+    height: 40px;
+    margin: 10px;
+}
+#price a{
+    font-family: 'Red Hat display',sans-serif;
+}
+#year{
+    width: 100%;
+    margin-left: -30px;
+    margin-top: 5px;
 }
 #btn{
     display: block;
-    width: 250px;
+    width: 280px;
+    margin-left: -5px;
+    margin-top: 10px;
     
+
 }
 .btn{
     width: 100%;
     height: 30px;
-    margin: 5px;
+    margin: 10px;
     border-radius: 10px;
     cursor: pointer;
+    border: none;
+    background-color: hsl(245, 75%, 52%);
+    color: #fff;
+    font-family: 'Red Hat display',sans-serif;
+    box-shadow: 0px 15px 10px hsl(224, 23%, 85%);
+}
+.btn1{
+    background-color: transparent;
+    color:hsl(224, 23%, 55%);
+    box-shadow: none;
 }
