--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,6 +7,14 @@
     --desaturated-blue: hsl(224, 23%, 55%);
     --dark-blue: hsl(223, 47%, 23%);
 }
+.attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
 *{
     margin: 0;
     padding: 0;
